<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/switchBreakandEnter"
        app:actionLayout="@layout/breakswitch"
        app:showAsAction="ifRoom"
        android:title="@string/break_and_enter"
        >
    </item>
    <item
        android:id="@+id/switchMischief"
        app:actionLayout="@layout/mischiefswitch"
        app:showAsAction="ifRoom"
        android:title="@string/mischief">
    </item>
    <item
        android:id="@+id/switchOffense"
        app:actionLayout="@layout/offenseswitch"
        app:showAsAction="ifRoom"
        android:title="@string/offense_against_a_person">
    </item>
    <item
        android:id="@+id/switchOtherTheft"
        app:actionLayout="@layout/othertheftswitch"
        app:showAsAction="ifRoom"
        android:title="@string/other_theft">
    </item>
    <item
        android:id="@+id/switchTheftFromVehicle"
        app:actionLayout="@layout/theftfromvehicleswitch"
        app:showAsAction="ifRoom"
        android:title="@string/theft_from_vehicle">
    </item>
    <item
        android:id="@+id/switchTheftOfBicycle"
        app:actionLayout="@layout/theftofbicycleswitch"
        app:showAsAction="ifRoom"
        android:title= "@string/theft_of_bicycle">
    </item>
    <item
        android:id="@+id/switchTheftOfVehicle"
        app:actionLayout="@layout/theftofvehicleswitch"
        app:showAsAction="ifRoom"
        android:title= "@string/theft_of_vehicle">
    </item>
    <item
        android:id="@+id/switchVehicleCollision"
        app:actionLayout="@layout/vehiclecollisionswitch"
        app:showAsAction="ifRoom"
        android:title= "@string/vehicle_collision">
    </item>
    <item
        android:id="@+id/edit_max_marker_count"
        android:title="@string/max_number_of_markers"
        android:entries="@array/max_counts"
        app:actionViewClass="android.widget.Spinner"

        app:showAsAction="always" />
    <item
        android:id="@+id/edit_max_radius"
        android:title="@string/alert_in_km"
        android:entries="@array/radii"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />
</menu>