<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:rowCount="10"
    android:columnCount="1">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings" />

    <CheckBox
        android:id="@+id/cb_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:text="@string/sound_alert" />
    <CheckBox
        android:id="@+id/cb_vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:text="@string/vibration_alert" />
    <GridLayout
        android:columnCount="2"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
        <TextView
            android:id="@+id/tv_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_in_km" />
    </GridLayout>
</GridLayout>